2003-01-07  #################### PortaBase 1.4 ####################

2003-01-07  JMB  Increased maximum rows per page, space launches row viewer

    You can now show up to 9999 rows in a page instead of 999.  Whether
    there's enough memory on the Zaurus to handle that many rows gracefully is
    another question. ^_^

    Just noticed that the center of the direction pad is treated as a
    space bar instead of an enter key, so that now also works to launch the
    row viewer.

2003-01-05  JMB  Row viewer/browser

    Added a row viewer based on a patch I received.  To launch it, either
    double-tap on a row or press enter while the desired row is selcted.
    Includes next and previous buttons to navigate between rows in the
    current view (left and right on the direction pad also work).

2003-01-04  JMB  File selector menu & toolbar, MobileDB import, better
                 sizing of column and condition editor dialogs, file extension
                 added for new files

    The file selector now has a "File" menu and 3 toolbar buttons; in
    addition to the previous functionality, these let you delete existing
    files.  The File menu also contains an option to create a new file
    from the data in a MobileDB file; MobileDB is a popular database
    program for PalmOS, many reference database files and such can be
    downloaded for it at no cost.

    Applied a patch to improve sizing of the column editor and condition
    editor dialogs; the hard-coded values didn't work well on the SL-C700.

    Another patch for the SL-C700; new files now have the ".pob" extension
    added so they show up correctly in the "Files" tab.

2002-12-07  JMB  Time columns, date picker uses appropriate week start day

    There is now a "Time" column type.  It uses the Qtopia system setting
    for 12/24 hour display preference, and there is a "Show Seconds"
    checkbox in the PortaBase preferences dialog.  Times in imported CSV