@@ -1,4 +1,4 @@
-PortaBase 1.4 (January 2003)
+PortaBase 1.4.1 (January 2003)
 ----------------------------
 PortaBase (portable database) is a personal database application written for
 the Linux-based models of Sharp Zaurus PDA (and should work on any other Linux
