@@ -1,11 +1,11 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-  <title>PortaBase 1.4</title>
+  <title>PortaBase 1.4.1</title>
 </head>
 <body>
 
-<div align="center"><h3>PortaBase 1.4</h3> - A portable database -</div>
+<div align="center"><h3>PortaBase 1.4.1</h3> - A portable database -</div>
 <br>
 <a href="#intro">1)Introduction</a><br>
 <a href="#file">2)File selector</a><br>
