@@ -1,7 +1,7 @@
 Package: portabase
 Priority: optional
 Section: Applications
-Version: 1.4
+Version: 1.4.1
 Architecture: arm
 Maintainer: Jeremy Bowman <jmbowman@alum.mit.edu>
 Depends: qpe-base, libmetakit1
